# secure-qrcode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml  ruff.toml
.github/workflows/: build.yml  docker-push.yml  lint-and-tests.yml  release.yml
secure_qrcode/: api.py  config.py  crypto.py  exceptions.py  models.py  qrcode.py
static/: styles.css
templates/: index.html
tests/: conftest.py  test_api.py  test_crypto.py  test_performance.py  test_qrcode.py
