[tool.poetry]
name = "secure-qrcode"
version = "0.1.0"
description = "Encrypt your data using the modern ChaCha20-Poly1305 cipher and export it into a secure QR code"
authors = ["Allisson Azevedo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pycryptodome = "^3.20.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.3"
jinja2 = "^3.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-vvv --cov=secure_qrcode --cov-report=term-missing"
