[project]
name = "secure-qrcode"
version = "0.1.0"
description = "Encrypt your data using the modern ChaCha20-Poly1305 cipher and export it into a secure QR code"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cryptography>=44.0.2",
    "fastapi>=0.114.2",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.5.2",
    "qrcode[pil]>=7.4.2",
    "uvicorn[standard]>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pre-commit>=3.8.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-vvv --cov=secure_qrcode --cov-report=term-missing"
