[project]
name = "secure-qrcode"
version = "0.1.0"
description = "Encrypt your data using the modern ChaCha20-Poly1305 cipher and export it into a secure QR code"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "cryptography>=46.0.3,<47",
    "fastapi>=0.119.0,<1",
    "jinja2>=3.1.6,<4",
    "pydantic-settings>=2.11.0,<3",
    "qrcode[pil]>=8.2,<9",
    "uvicorn[standard]>=0.37.0,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-vvv --cov=secure_qrcode --cov-report=term-missing"
